# PyLambertW

./: README.md  pyproject.toml  requirements.txt  setup.py  simulation.py
.circleci/: config.yml
pylambertw/: __init__.py  lamberter.py  tukeyhutils.py
script/: simulate_heavytails.py
test/: test_basic_funcs.py
